--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -125,7 +125,7 @@
     <br>
     
     {% for review in reviews %}
-    <div class="card" style="background-color: #ffc107; font-weight: bold; box-shadow: 1px 1px 30px black; margin-bottom: 500px;">
+    <div class="card" style="background-color: #ffc107; font-weight: bold; box-shadow: 1px 1px 30px black;">
       <div class="card-header">
           Review Game: {{review.game}}
       </div>
