added form authentication form validation

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -47,7 +47,7 @@
         </div>
         <div class="carousel-inner" style="border-bottom: 3px solid #ffc107;">
           <div class="carousel-item active" data-bs-interval="1500">
-            <img src="{{first_image}}" class="d-block w-100" style= "height: 500px" alt="..."">
+            <img src="{{first_image}}" class="d-block w-100" style= "height: 500px" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>{{first_title}}</h5>
             </div>
